# research_scaner

./: CLAUDE.md  CODEX_TaskBriefs_Feedback_Fixes.md  LAUNCH_GUIDE.md  QUICKSTART.md  README.md  TZ_updates.md  config.yaml  pyproject.toml  ТЗ_ MEXC Spread Feasibility Scanner (Research Script v0.md
configs/: smoke.yaml  strict.yaml
deploy/systemd/: research-scanner.env  research-scanner@.service
docs/: spec.md
docs/howto/: run_as_service.md
scanner/: __init__.py  __main__.py  cleanup.py  config.py
scanner/analytics/: __init__.py  depth_metrics.py  scoring.py  spread_stats.py
scanner/io/: bundle.py  depth_export.py  export_universe.py  layout.py  raw_writer.py  summary_export.py
scanner/mexc/: __init__.py  client.py  errors.py  ratelimit.py
scanner/models/: __init__.py  depth.py  spread.py  universe.py
scanner/obs/: logging.py  metrics.py
scanner/pipeline/: __init__.py  depth_check.py  errors.py  runner.py  spread_sampling.py  stages.py  state.py  ticker_24h.py  universe.py
scanner/report/: __init__.py  (+1 more)
scripts/: install_logrotate.sh  install_service.sh  run_direct.sh  run_interactive.sh  run_service.sh  sync_configs_to_systemd.sh  uninstall_service.sh
tests/: test_bundle.py  test_config.py  test_depth_check.py  test_depth_export.py  test_depth_metrics.py  test_failures.py  test_layout.py  test_metrics_export.py  test_mexc_client.py  test_pipeline_runner.py  test_pipeline_timeouts.py  test_report_md.py  test_scoring.py  test_scoring_edge.py  test_spread_sampling.py  test_spread_stats.py  test_summary_export.py  test_ticker_24h.py  test_universe.py
(+5 files in other folders)
