[project]
name = "research_scaner"
version = "0.1.0"
description = "Bootstrap CLI for research scanner"
readme = "README.md"
requires-python = ">=3.10.12"
dependencies = [
  "pydantic>=2.6",
  "PyYAML>=6.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scanner*"]

[tool.pytest.ini_options]
addopts = "-q"

testpaths = ["tests"]
